projects/vb6parse/snapshots/tests/library/file/freefile/freefile_with_close.snap
---
source: projects/vb6parse/tests/library/file/freefile.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: fileNum
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: FreeFile
        - kind: Newline
          text: "\n"
    - kind: OpenStatement
      children:
        - kind: OpenKeyword
          text: Open
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"data.txt\""
        - kind: Whitespace
          text: " "
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: KeywordClause
          children:
            - kind: InputKeyword
              text: Input
        - kind: Whitespace
          text: " "
        - kind: ExpressionClause
          children:
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Octothorpe
                  text: "#"
                - kind: Identifier
                  text: fileNum
    - kind: Newline
      text: "\n"
    - kind: CloseStatement
      children:
        - kind: CloseKeyword
          text: Close
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: Identifier
                      text: fileNum
